--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
 
     <h1 id="header">Manish Kasera</h1>
     <img src="assets/manish(apply_pic).jpg " alt=" ">
+    <table>
+        <tr>
+            <th>Number</th>
+            <th>Name</th>
+            <th>Roll Number</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Manish Kumar </td>
+            <td>13</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Scahin </td>
+            <td>103</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Kumar </td>
+            <td>130</td>
+        </tr>
+    </table>
 </body>
 
 
